--- a/Home.html
+++ b/Home.html
@@ -4,24 +4,30 @@
 <head>
     <title>Bread & Better</title>
     <link href="Home.css" rel="stylesheet">
+    
 </head>
 
 <body>
+    <div class="fix-it">
+    <a class="left relative-it" href="Menu.html"><img class="menupics" src='Menu1.jpg'></a>
+    <a class="center relative-it" href="Home.html"><img class="menupics" src='Menu2.jpg'></a>
+    <a class="right relative-it" href="MyProfile.html"><img class="menupics" src='Menu3.jpg'></a>
+  </div>
     <img src="Bread1.JPG" height="100%" width="100%">
     <h1>Keto Friendly Bread,<br />Made Better</h1>
     <div class="A">
         <p>Start with a FREE trial loaf. Just pay RM8 for delivery.</p>
-        <p><a href="GetStarted.html">Get Started</a></p>
-        <p><a href="Login.html">Existing customer? Login here</a></p>
+        <button type="button" class="button"><a class="blep stretch-hands" href="GetStarted.html">Get Started</a></button>
+        <p><a class="new-change" href="Login.html">Existing customer? Login here</a></p>
     </div>
-    <img>
+    <img src="Bread2.jpg" height="100%" width="100%">
     <h1>The Better Bread</h1>
     <h2>Finally a keto friendly bread, that tastes like bread!</h2>
     <div class="A">
         <p>No more dry, dense, or worse, eggy bread.<br />The Better Bread is soft, spongy, and moist.</p>
         <p>Each slice of The Better Bread has only 2g net carbs and 2g of protein.
             <p>Baked fresh and delivered on the same day.</p>
-            <p><a href="OrderNow.html">Order Now</a></p>
+            <button type="button" class="button"><a class="blep stretch-hands" href="OrderNow.html">Order Now</a></button>
     </div>
 </body>
 
