--- a/Home.html
+++ b/Home.html
@@ -9,9 +9,9 @@
 
 <body>
     <div class="fix-it">
-    <a class="left relative-it" href="Menu.html"><img class="menupics" src='Menu1.jpg'></a>
-    <a class="center relative-it" href="Home.html"><img class="menupics" src='Menu2.jpg'></a>
-    <a class="right relative-it" href="MyProfile.html"><img class="menupics" src='Menu3.jpg'></a>
+    <a class="left" href="Menu.html"><img class="menupics" src='Menu1.jpg'></a>
+    <a class="center" href="Home.html"><img class="menupics" src='Menu2.jpg'></a>
+    <a class="right" href="MyProfile.html"><img class="menupics" src='Menu3.jpg'></a>
   </div>
     <img src="Bread1.JPG" height="100%" width="100%">
     <h1>Keto Friendly Bread,<br />Made Better</h1>
