need to pull header

--- a/HowItWorks.html
+++ b/HowItWorks.html
@@ -12,7 +12,8 @@
     <h1>How It Works</h1>
     <h2>Bread and Better brings you freshly baked, keto friendly bread, in a convenient way just as you like it.</h2>
     <p>Get started in just three simple steps.</p>
-    <h2>Step 1<br />Get Your First FREE Loaf</h2>
+    <p class="colour" >Step 1</p><br />
+    <h2>Get Your First FREE Loaf</h2>
     <p>Choose the size and type of loaf you want to receive following your first FREE loaf.</p>
     <h2>Step 2<br />Choose Your Plan</h2>
     <p>Choose how often you want to receive your freshly baked loaf</p>
