--- a/GetStarted.html
+++ b/GetStarted.html
@@ -7,20 +7,38 @@
 </head>
 
 <body>
-    <h1>Better Bread Plan</h1>
-    <p>Step 1</p>
-    <p>Get Your First FREE Loaf</p>
-    <p>Get a FREE Monica loaf on your first order.<br />Just pay RM8.00 for delivery.</p>
-    <p>Choose the size and type of loaf you want to receive following your first FREE loaf</p>
-    <!--Pheobe & Monica option boxes-->
-    <p>Product information</p>
-    <ul>
-        <li>Ingredients: Oat fiber, vital wheat gluten, inulin, golden flax seed, almond flour, xanthan gum, erythritol,
-            salt, water, eggs, butter, yeast</li>
-        <li>Nutrition facts (per slice): Calories 48g, Total carbs, 3g, Net carbs 2g, Fat: 4g, Protein 2g, Fiber 1g</li>
-    </ul>
-    <!--Step 2: Choose Your Plan (sticky button at footer thingy)-->
-    <a href="GetStarted2.html">Step 2: Choose Your Plan</a>
+    <div class="menubar">
+        <a class="left" href="Menu.html"><img class="menupics" src='Menu1.jpg'></a>
+        <a class="center" href="Home.html"><img class="menupics" src='Menu2.jpg'></a>
+        <a class="right" href="MyProfile.html"><img class="menupics" src='Menu3.jpg'></a>
+    </div>
+    <div class="restofwebpage">
+        <h1>Better Bread Plan</h1>
+        <p class="steps">Step 1</p>
+        <h2>Get Your First FREE Loaf</h2>
+        <p class="content">Get a FREE Monica loaf on your first order.<br />Just pay RM8.00 for delivery.</p>
+        <p class="content">Choose the size and type of loaf you want to receive following your first FREE loaf</p>
+
+        <!--Pheobe & Monica option boxes-->
+        <img class="breadbread" src=Pheobe.jpg height="40%" width="40%" border="5px" />
+        <img class="breadbread" src=Pheobe.jpg height="40%" width="40%" />
+        <p class="product">Product information</p>
+        <ul>
+            <li>Ingredients: Oat fiber, vital wheat gluten, inulin, golden flax seed, almond flour, xanthan gum,
+                erythritol,
+                salt, water, eggs, butter, yeast</li>
+            <li>Nutrition facts (per slice): Calories 48g, Total carbs, 3g, Net carbs 2g, Fat: 4g, Protein 2g, Fiber 1g
+            </li>
+        </ul>
+        <!--Step 2: Choose Your Plan (sticky button at footer thingy)-->
+
+    </div>
+    <div class="btmbar">
+        <div class="footerwrap">
+            <a class="step2" href="GetStarted2.html">Step 2: Choose Your Plan</a>
+        </div>
+    </div>
+
 </body>
 
 </html>
